Fixed heading spacing from top on all pages and all screen sizes

--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -205,7 +205,7 @@ h4, h5, h6 {
     -o-font-feature-settings: 'dlig' 1, 'liga' 1, 'lnum' 1, 'kern' 1;
     color: #2E2E2E;
     line-height: 1.15em;
-    margin: 0 0 0.4em 0;
+    /* margin: 0 0 0.4em 0; */
 
     font-family: "Open Sans", sans-serif;
     text-rendering: geometricPrecision;
@@ -500,7 +500,7 @@ body.nav-opened .site-wrapper {
     display: table;
     width: 100%;
     height: 100vh;
-    margin-bottom: 5rem;
+    margin-bottom: 30px;
     text-align: center;
     background: #222 no-repeat center center;
     background-size: cover;
@@ -891,7 +891,9 @@ body.nav-opened .menu-button .word {
     /* max-height: 40vh; */
 	min-height: 35px;
     max-height: 0vh;
+    padding-bottom: 30px;
     background: #f5f8fa;
+    margin-bottom: 0;
 }
 
 .no-cover .page-title {
@@ -1535,7 +1537,7 @@ body:not(.post-template) .post-title {
         -moz-box-sizing: border-box;
         box-sizing: border-box;
         height: auto;
-        min-height: 240px;
+        /* min-height: 240px; */
         height: 60vh;
         /* padding: 15% 0; */
 		padding: 0% 0;
@@ -1578,6 +1580,7 @@ body:not(.post-template) .post-title {
 
     body:not(.post-template) .post-title {
         font-size: 3.2rem;
+        padding-top: 20px;
     }
 
     hr {
@@ -1691,12 +1694,13 @@ body:not(.post-template) .post-title {
     } */
 
     .main-header {
-        margin-bottom: 15px;
+        margin-bottom: 30px;
         height: 40vh;
     }
 
     .no-cover.main-header {
         height: 30vh;
+        padding-bottom: 50px;
     }
 
     .archive-template .main-header {
@@ -1857,6 +1861,7 @@ body:not(.post-template) .post-title {
 
     body:not(.post-template) .post-title {
         font-size: 2.5rem;
+        padding-top: 20px;
     }
 
     .post-template .post {
